@@ -1,6 +1,9 @@
 Changes
 -------
 
+2015-09-08
+- Error corrected in AudioIo.loadWavFile(): stream.close() was missing.
+
 2015-05-27
 - DFT class added.
 
